--- a/pages/servicios_catering.html
+++ b/pages/servicios_catering.html
@@ -4,108 +4,123 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios de Catering</title>
+    <title>Pizzeria Doña Coya</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/stylesheet.css">
     <link rel="shortcut icon" href="../img/logo.jpg" type="image/x icon">
+
 </head>
 <body>
     <!-- Inicia NAV -->
-    <nav>
-
-        <a href="../index.html">
-            <img src="../img/logo.jpg" class="logoBorder" alt="Logo de Pizzeria">
-        </a>
-
-        <ul class="ulDisplay">
-                <li class="liDisplay">
-                        <a href="productos.html" class="aDisplay">Productos</a>
-                </li>
-                <li class="liDisplay">
-                        <a href="servicios_catering.html" class="aDisplay">Servicios de Catering</a>
-                </li>
-                <li class="liDisplay">
-                        <a href="recetas.html" class="aDisplay">Recetas</a>
-                </li>
-                <li class="liDisplay">
-                        <a href="sobre_nosotros.html" class="aDisplay">Sobre Nosotros</a>
-                </li>
-        </ul>
- </nav>   
- <!-- Termina NAV -->
+    <nav class="navbar navbar-expand-sm bg-white text-black" id="botonera">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html">
+            <img src="../img/logo.jpg" class="logoBorder" alt="Logo Pizzeria">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link text-black"  href="productos.html">Productos</a>
+              <a class="nav-link text-black"  href="recetas.html">Recetas</a>
+              <a class="nav-link text-black"  href="servicios_catering.html">Servicios de Catering</a>
+              <a class="nav-link text-black"  href="sobre_nosotros.html">Sobre Nosotros</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+       <!-- Termina NAV -->
  <!-- Inicia Header -->
- <header>
-    <img src="../img/header.jpg" class="imgSize" alt="Foto Pizza">
-</header>
-<!-- Termina Header -->
+    <header>
+        <img src="../img/alejandra_dueña.jpeg" class="imgSize" alt="Foto Pizza">
+    </header>
+ <!-- Termina Header -->
  <!-- Inicia Section -->
-    <section>
-        <div class="boxForm">
-            <h1 class>¡Hola! Somos Pizzeria Doña Coya</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam magni repellat molestiae voluptatem asperiores nulla unde. Praesentium temporibus, adipisci nesciunt eligendi nemo rem placeat odit consectetur iure perspiciatis quis delectus?</p>
-        </div>    
-            <h2 class="boxForm">Nuestros Servicios</h2>
-        <article>
-            <ul>
-                <li>
+<section>
+        <div class="boxForm2">
+            <h1>SERVICIOS DE CATERING</h1>
+        </div>
+
+    <article>
+        <ul>
+            <div class="gridContainer">
+                <li class="gridLi">
                     Cubrimos tus Eventos mas Importantes
                 </li>
+                    <p class="gridP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
+                    <img src="../img/servicios_de_catering.jpg" class="gridImg img w-100" alt="Servicios de Catering">
+            </div> 
 
-         <div class="boxForm">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
-                <img src="../img/servicios_de_catering.jpg" class="img" alt="Servicios de Catering">
-        </div> 
+            <div class="gridContainer"> 
+                <li class="gridLi">
+                        Contamos con Servicio de Delivery para que recibas tu Cena sin moverte de tu casa
+                </li>
+                <p class="gridP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
 
-            <li>
-                Contamos con Servicio de Delivery para que recibas tu Cena sin moverte de tu casa
-            </li>
+                    <img src="../Img/delivery_boy.jpg" class="gridImg img w-100" alt="Persona Llevando Pizzas">
+            </div> 
 
-            <div class="boxForm">    
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
-
-                <img src="../Img/delivery_boy.jpg" class="img" alt="Persona Llevando Pizzas">
-        </div> 
-            <li>
-                Te guiamos para que vos tambien puedas realizar las recetas de la Nona
-            </li>
-        <div class="boxForm">    
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
-
-                <img src="../img/libro_de_recetas.jpg" class="img" alt="Libro de recetas">
-        </div>    
-    </ul>
-</article>    
-    </section>
+            <div class="gridContainer">  
+                <li class="gridLi">
+                    Te guiamos para que vos tambien puedas realizar las recetas de la Nona
+                </li>
+                <p class="gridP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
+                <img src="../img/libro_de_recetas.jpg" class="gridImg img w-100" alt="Libro de recetas">
+            </div>    
+        </ul>
+    </article>    
+</section>
 <!-- Termina Section -->
 <!-- Inicia Segunda Section -->
     <section class="boxForm">
-        <form action="" id="contacto">
-            <label for="name">Nombre</label>
-            <input type="text" id="name">
-            <br>
-            <label for="tel">Telefono</label>
-            <input type="tel">
-            <br>
-            <label for="mail">Email</label>
-            <input type="mail">
-            <br>
-            <label for="pedido">Envianos tu pedido</label>
-            <textarea name="" id="pedido" cols="30" rows="10"></textarea>
-            <br>
-            <input type="reset" value="Cancelar">
-            <input type="submit" value="Enviar">
-        </form>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3274.2674697388925!2d-58.384815184637525!3d-34.8495060780518!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd4d084efac8f%3A0x267d1aa2742dc4da!2sLanguenheim%20148%2C%20Longchamps%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1661742318145!5m2!1sen!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        <form>
+            <div class="row mb-3">
+              <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+              <div class="col-sm-10">
+                <input type="email" class="form-control" id="inputEmail3">
+              </div>
+            </div>
+
+            <div class="row mb-3">
+              <label for="name" class="col-sm-2 col-form-label">Nombre</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputPassword3">
+              </div>
+            </div>
+
+            <div class="row mb-3">
+              <label for="tel" class="col-sm-2 col-form-label">Telefono</label>
+              <div class="col-sm-10">
+                <input type="tel" class="form-control" id="inputPassword3">
+              </div>
+            </div>
+
+            <div class="row mb-3">
+              <label for="pedido" class="col-sm-2 col-form-label">Envianos tu pedido</label>
+              <div class="col-sm-10">
+                <textarea name="" id="pedido" cols="30" rows="10"></textarea>
+              </div>
+            </div>
+
+            <button type="reset" class="btn btn-primary">Reset</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>       
+        
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3274.2674697388925!2d-58.384815184637525!3d-34.8495060780518!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd4d084efac8f%3A0x267d1aa2742dc4da!2sLanguenheim%20148%2C%20Longchamps%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1661742318145!5m2!1sen!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 <!-- Termina segunda Section -->
 <!-- Inicia Footer -->
     <footer>
         <a href="#">
-        <img src="img/instagram_logo.png" alt="Logo Instagram" height="50px" width="50 px">
+        <img src="../img/instagram_logo.png" alt="Logo Instagram" height="50px" width="50 px">
         </a>    
         <a href="#">
-        <img src="img/facebook_logo.png" alt="Logo Facebook" height="50px" width="50px">
+        <img src="../img/facebook_logo.png" alt="Logo Facebook" height="50px" width="50px">
         </a>    
     </footer>
 <!-- Termina Footer -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
