Animacion de imagen principal

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </nav>
        <!-- Termina NAV -->
  <!-- Inicia Header -->
-    <header>
+    <header class="imgAnimation">
         <img src="./img/alejandra_dueña.jpeg" class="imgSize" alt="Foto Pizza">
     </header>
  <!-- Termina Header -->
