--- a/pages/productos.html
+++ b/pages/productos.html
@@ -41,7 +41,7 @@
     <article>
         <ul>
             <div class="gridContainer">
-                <li class="gridLi">
+                <li class="gridLi img">
                     Empanadas de la Nona
                 </li>
                     <p class="gridP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
