--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
  <!-- Termina Header -->
  <!-- Inicia Section -->
 <section>
-        <div class="boxForm2">
+        <div class="container-fluid bg-grey">
             <h1 class>¡Hola! Somos Pizzeria Doña Coya</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam magni repellat molestiae voluptatem asperiores nulla unde. Praesentium temporibus, adipisci nesciunt eligendi nemo rem placeat odit consectetur iure perspiciatis quis delectus?</p>
         </div>  
 
-        <div class="boxForm2">
+        <div class="container bg-grey">
             <h2>Nuestros Servicios</h2>
         </div>
 
     <article>
         <ul>
             <div class="gridContainer">
-                <li class="gridLi">
+                <li class="gridLi cont">
                     Cubrimos tus Eventos mas Importantes
                 </li>
                     <p class="gridP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
@@ -113,8 +113,11 @@
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>       
         
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3274.2674697388925!2d-58.384815184637525!3d-34.8495060780518!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd4d084efac8f%3A0x267d1aa2742dc4da!2sLanguenheim%20148%2C%20Longchamps%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1661742318145!5m2!1sen!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </section>
+          <div class="boxFormiframe">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3274.2674697388925!2d-58.384815184637525!3d-34.8495060780518!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd4d084efac8f%3A0x267d1aa2742dc4da!2sLanguenheim%20148%2C%20Longchamps%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1661742318145!5m2!1sen!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>  
+    
+        </section>
 <!-- Termina segunda Section -->
 <!-- Inicia Footer -->
     <footer>
