--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizzeria Doña Coya</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/stylesheet.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="shortcut icon" href="img/logo.jpg" type="image/x icon">
 
 </head>
@@ -50,28 +50,28 @@
     <article>
         <ul>
             <div class="gridContainer">
-                <li class="gridLi cont">
+                <li>
                     Cubrimos tus Eventos mas Importantes
                 </li>
-                    <p class="gridP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
-                    <img src="./img/servicios_de_catering.jpg" class="gridImg img w-100" alt="Servicios de Catering">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
+                    <img src="./img/servicios_de_catering.jpg" class="img w-100" alt="Servicios de Catering">
             </div> 
 
             <div class="gridContainer"> 
-                <li class="gridLi">
+                <li>
                         Contamos con Servicio de Delivery para que recibas tu Cena sin moverte de tu casa
                 </li>
-                <p class="gridP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
 
-                    <img src="./Img/delivery_boy.jpg" class="gridImg img w-100" alt="Persona Llevando Pizzas">
+                    <img src="./Img/delivery_boy.jpg" class="img w-100" alt="Persona Llevando Pizzas">
             </div> 
 
             <div class="gridContainer">  
-                <li class="gridLi">
+                <li>
                     Te guiamos para que vos tambien puedas realizar las recetas de la Nona
                 </li>
-                <p class="gridP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
-                <img src="./img/libro_de_recetas.jpg" class="gridImg img w-100" alt="Libro de recetas">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
+                <img src="./img/libro_de_recetas.jpg" class="img w-100" alt="Libro de recetas">
             </div>    
         </ul>
     </article>    
