--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" Content="Pizzeria Doña Coya tu mejor opcion de comidas caseras en Zona Sur"> 
+    <meta name="keywords" content="Pizzeria, Pizzas, Empanadas, Comidas Caseras">
+    <meta name="author" Content="Mauro Guzman">
     <title>Pizzeria Doña Coya</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
@@ -120,8 +123,8 @@
         </section>
 <!-- Termina segunda Section -->
 <!-- Inicia Footer -->
-    <footer>
-        <a href="#">
+<footer class="container-fluid d-flex justify-content-center">
+  <a href="#">
         <img src="img/instagram_logo.png" alt="Logo Instagram" height="50px" width="50 px">
         </a>    
         <a href="#">
