--- a/pages/servicios_catering.html
+++ b/pages/servicios_catering.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizzeria Doña Coya</title>
+    <title>Servicios de Catering Pizzeria Doña Coya</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="shortcut icon" href="../img/logo.jpg" type="image/x icon">
@@ -31,11 +31,6 @@
         </div>
       </nav>
        <!-- Termina NAV -->
- <!-- Inicia Header -->
-    <header>
-        <img src="../img/alejandra_dueña.jpeg" class="imgSize" alt="Foto Pizza">
-    </header>
- <!-- Termina Header -->
  <!-- Inicia Section -->
 <section>
         <div class="boxForm2">
@@ -45,74 +40,25 @@
     <article>
         <ul>
             <div class="gridContainer">
-                <li class="gridLi">
-                    Cubrimos tus Eventos mas Importantes
+                <li>
+                    Catering Salados
                 </li>
-                    <p class="gridP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
-                    <img src="../img/servicios_de_catering.jpg" class="gridImg img w-100" alt="Servicios de Catering">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
+                    <img src="../img/catering_salado.jpg" class="img" alt="Servicios de Catering">
             </div> 
 
             <div class="gridContainer"> 
-                <li class="gridLi">
-                        Contamos con Servicio de Delivery para que recibas tu Cena sin moverte de tu casa
+                <li>
+                  Mesas Dulces
                 </li>
-                <p class="gridP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
 
-                    <img src="../Img/delivery_boy.jpg" class="gridImg img w-100" alt="Persona Llevando Pizzas">
+                    <img src="../Img/mesa_dulce_catering.jpeg" class="img" alt="Persona Llevando Pizzas">
             </div> 
-
-            <div class="gridContainer">  
-                <li class="gridLi">
-                    Te guiamos para que vos tambien puedas realizar las recetas de la Nona
-                </li>
-                <p class="gridP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
-                <img src="../img/libro_de_recetas.jpg" class="gridImg img w-100" alt="Libro de recetas">
-            </div>    
-        </ul>
-    </article>    
 </section>
 <!-- Termina Section -->
-<!-- Inicia Segunda Section -->
-    <section class="boxForm">
-
-        <form>
-            <div class="row mb-3">
-              <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-              <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputEmail3">
-              </div>
-            </div>
-
-            <div class="row mb-3">
-              <label for="name" class="col-sm-2 col-form-label">Nombre</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputPassword3">
-              </div>
-            </div>
-
-            <div class="row mb-3">
-              <label for="tel" class="col-sm-2 col-form-label">Telefono</label>
-              <div class="col-sm-10">
-                <input type="tel" class="form-control" id="inputPassword3">
-              </div>
-            </div>
-
-            <div class="row mb-3">
-              <label for="pedido" class="col-sm-2 col-form-label">Envianos tu pedido</label>
-              <div class="col-sm-10">
-                <textarea name="" id="pedido" cols="30" rows="10"></textarea>
-              </div>
-            </div>
-
-            <button type="reset" class="btn btn-primary">Reset</button>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>       
-        
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3274.2674697388925!2d-58.384815184637525!3d-34.8495060780518!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd4d084efac8f%3A0x267d1aa2742dc4da!2sLanguenheim%20148%2C%20Longchamps%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1661742318145!5m2!1sen!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </section>
-<!-- Termina segunda Section -->
 <!-- Inicia Footer -->
-    <footer>
+    <footer class="container-fluid d-flex justify-content-center">
         <a href="#">
         <img src="../img/instagram_logo.png" alt="Logo Instagram" height="50px" width="50 px">
         </a>    
