--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     Cubrimos tus Eventos mas Importantes
                 </li>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
-                    <img src="./img/servicios_de_catering.jpg" class="img w-100" alt="Servicios de Catering">
+                    <img src="./img/servicios_de_catering.jpg" class="img" alt="Servicios de Catering">
             </div> 
 
             <div class="gridContainer"> 
@@ -66,7 +66,7 @@
                 </li>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
 
-                    <img src="./Img/delivery_boy.jpg" class="img w-100" alt="Persona Llevando Pizzas">
+                    <img src="./img/delivery_boy.jpg" class="img" alt="Persona Llevando Pizzas">
             </div> 
 
             <div class="gridContainer">  
@@ -74,7 +74,7 @@
                     Te guiamos para que vos tambien puedas realizar las recetas de la Nona
                 </li>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
-                <img src="./img/libro_de_recetas.jpg" class="img w-100" alt="Libro de recetas">
+                <img src="./img/libro_de_recetas.jpg" class="img" alt="Libro de recetas">
             </div>    
         </ul>
     </article>    
