--- a/pages/servicios_catering.html
+++ b/pages/servicios_catering.html
@@ -53,7 +53,7 @@
                 </li>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
 
-                    <img src="../Img/mesa_dulce_catering.jpeg" class="img" alt="Persona Llevando Pizzas">
+                    <img src="../img/mesa_dulce_catering.jpeg" class="img" alt="Mesa Dulce">
             </div> 
 </section>
 <!-- Termina Section -->
