--- a/pages/productos.html
+++ b/pages/productos.html
@@ -54,7 +54,7 @@
                 </li>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
 
-                    <img src="../Img/pizza..jpg" class="img" alt="Persona Llevando Pizzas">
+                    <img src="../img/pizza.jpg" class="img" alt="Pizza">
             </div> 
 
             <div class="gridContainer">  
