--- a/index.html
+++ b/index.html
@@ -85,28 +85,28 @@
 
         <form>
             <div class="row mb-3">
-              <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-              <div class="col-sm-10">
+              <label for="inputEmail3" class="col-sm-2 col-lg-4 col-form-label">Email</label>
+              <div class="col-sm-10 col-lg-">
                 <input type="email" class="form-control" id="inputEmail3">
               </div>
             </div>
 
             <div class="row mb-3">
-              <label for="name" class="col-sm-2 col-form-label">Nombre</label>
+              <label for="name" class="col-sm-2 col-lg-4 col-form-label">Nombre</label>
               <div class="col-sm-10">
                 <input type="text" class="form-control" id="inputPassword3">
               </div>
             </div>
 
             <div class="row mb-3">
-              <label for="tel" class="col-sm-2 col-form-label">Telefono</label>
+              <label for="tel" class="col-sm-2 col-lg-4 col-form-label">Telefono</label>
               <div class="col-sm-10">
                 <input type="tel" class="form-control" id="inputPassword3">
               </div>
             </div>
 
             <div class="row mb-3">
-              <label for="pedido" class="col-sm-2 col-form-label">Envianos tu pedido</label>
+              <label for="pedido" class="col-sm-2 col-lg-4 col-form-label">Envianos tu pedido</label>
               <div class="col-sm-10">
                 <textarea name="" id="pedido" cols="30" rows="10"></textarea>
               </div>
