--- a/pages/productos.html
+++ b/pages/productos.html
@@ -53,8 +53,7 @@
                         Las mejores Pizzas de Longchamps
                 </li>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
-
-                    <img src="../img/pizza.jpg" class="img" alt="Pizza">
+                    <img src="../img/pizza..jpg" class="img" alt="Pizza">
             </div> 
 
             <div class="gridContainer">  
