--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -63,7 +63,7 @@
                 </li>
                 <p class="gridP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
 
-                    <img src="../Img/valores.jpg" class="img" alt="Persona Llevando Pizzas">
+                    <img src="../img/valores.jpg" class="img" alt="Valores">
             </div> 
 
             <div class="gridContainer">  
