Cambios Entrega final

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -34,36 +34,34 @@
  <!-- Inicia Section -->
 <section>
 
-        <div class="boxForm2">
+        <div class="container-fluid text-center bg-grey">
             <h1>PRODUCTOS PIZZERIA DOÑA COYA</h1>
         </div>
 
     <article>
-        <ul>
             <div class="gridContainer">
-                <li>
+                <h3>
                     Empanadas de la Nona
-                </li>
+                </h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
                     <img src="../img/productos_empanadas.jpeg" class="img" alt="Servicios de Catering">
             </div> 
 
             <div class="gridContainer"> 
-                <li>
+                <h3>
                         Las mejores Pizzas de Longchamps
-                </li>
+                </h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
                     <img src="../img/pizza..jpg" class="img" alt="Pizza">
             </div> 
 
             <div class="gridContainer">  
-                <li>
-                    Los postres mas ricos para compartir con tu familia
-                </li>
+                <h3>
+                    Los postres más ricos para compartir con tu familia
+                </h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
                 <img src="../img/postres_productos.jpg" class="img" alt="Libro de recetas">
             </div>    
-        </ul>
     </article>    
 </section>
 <!-- Termina Section -->
