--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -33,7 +33,7 @@
        <!-- Termina NAV -->
  <!-- Inicia Header -->
     <header>
-        <img src="../img/sobre_nosotros.webp" class="imgSize" alt="Foto Pizza">
+        <img src="../img/alejandra_dueña.jpeg" class="imgSize" alt="Foto Pizza">
     </header>
  <!-- Termina Header -->
  <!-- Inicia Section -->
@@ -48,32 +48,30 @@
         </div>
 
     <article>
-        <ul>
             <div class="gridContainer">
-                <li class="gridLi">
-                    Logros Obtenidos
-                </li>
+              <h3 class="text-start fs-4 text-decoration-underline">
+                Logros Obtenidos
+              </h3>
                     <p class="gridP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
                     <img src="../img/logros_obtenidos.jpg" class="img" alt="Servicios de Catering">
             </div> 
 
             <div class="gridContainer"> 
-                <li class="gridLi">
-                  Valores
-                </li>
+              <h3 class="text-start fs-4 text-decoration-underline">
+                Valores
+              </h3>
                 <p class="gridP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
 
                     <img src="../img/valores.jpg" class="img" alt="Valores">
             </div> 
 
             <div class="gridContainer">  
-                <li class="gridLi">
-                  Servicios Destacados
-                </li>
+              <h3 class="text-start fs-4 text-decoration-underline">
+                Servicios Destacados
+              </h3>
                 <p class="gridP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
                 <img src="../img/servicios_destacados.jpg" class="img" alt="Libro de recetas">
             </div>    
-        </ul>
     </article>    
 </section>
 <!-- Termina Section -->
