--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
 
 </head>
 <body>
-    <!-- Inicia NAV -->
-    <nav class="navbar navbar-expand-sm bg-white text-black" id="botonera">
+<!-- CONTACTO -->
+<div class="container-fluid d-flex justify-content-center bg-white">
+  <img src="./img/wssp_img.webp" height="50 px" width="50 px" alt="Logo Wssp">
+  <h3 class="p-2 fs-5">011-32723909/ 011-36317804</h3>
+</div>
+<!-- CONTACTO -->
+<!-- Inicia NAV -->
+    <nav class="navbar navbar-expand-sm bg-white text-black sticky-top" id="botonera">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
             <img src="./img/logo.jpg" class="logoBorder" alt="Logo Pizzeria">
@@ -33,50 +39,71 @@
           </div>
         </div>
       </nav>
-       <!-- Termina NAV -->
- <!-- Inicia Header -->
-    <header class="imgAnimation">
-        <img src="./img/alejandra_dueña.jpeg" class="imgSize" alt="Foto Pizza">
-    </header>
- <!-- Termina Header -->
+<!-- Termina NAV -->
+<!-- Inicia Carousel -->
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="./img/catering_salado.jpg" class="d-block w-100" alt="Catering salado">
+    </div>
+    <div class="carousel-item">
+      <img src="./img/mesa_dulce_cumpleaños.jpg" class="d-block w-100" alt="Mesas dulces">
+    </div>
+    <div class="carousel-item">
+      <img src="./img/pizzas_pedidos.jpg" class="d-block w-100" alt="Pizzas">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div><!-- Termina Carousel -->
+
  <!-- Inicia Section -->
 <section>
         <div class="container-fluid bg-grey">
-            <h1 class>¡Hola! Somos Pizzeria Doña Coya</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam magni repellat molestiae voluptatem asperiores nulla unde. Praesentium temporibus, adipisci nesciunt eligendi nemo rem placeat odit consectetur iure perspiciatis quis delectus?</p>
+            <h1 class="p-2 m-2 text-center ">Bienvenidos a Pizzeria Doña Coya</h1>
+            <p class="text-center">Bienvenidos a nuestra Pagina Web donde podras Conocernos, ver nuestros Productos y Servicios.</p>
         </div>  
 
         <div class="container bg-grey">
-            <h2>Nuestros Servicios</h2>
+            <h2 class="text-center">Nuestros Servicios</h2>
         </div>
 
     <article>
-        <ul>
             <div class="gridContainer">
-                <li>
-                    Cubrimos tus Eventos mas Importantes
-                </li>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
-                    <img src="./img/servicios_de_catering.jpg" class="img" alt="Servicios de Catering">
+                <h3 class="text-start fs-4 text-decoration-underline">
+                    Cubrimos tus Eventos más Importantes
+                </h3>
+                    <p class="text-start fs-6">Junto con nuestro equipo de trabajo nos ocupamos de Preparar todo para tu evento y que tanto vos como tus comensales se ocupen unicamente de crear un recuerdo hermoso.</p>
+                    <img src="./img/eventos_1.jpg" class="img" alt="Servicios de Catering">
             </div> 
 
             <div class="gridContainer"> 
-                <li>
+                <h3 class="text-start fs-4 text-decoration-underline">
                         Contamos con Servicio de Delivery para que recibas tu Cena sin moverte de tu casa
-                </li>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
+                </h3>
+                <p class="text-start fs-6">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
 
-                    <img src="./img/delivery_boy.jpg" class="img" alt="Persona Llevando Pizzas">
+                    <img src="./img/pizzas_pedidos.jpg" class="img" alt="Pedido de Pizzas">
             </div> 
 
             <div class="gridContainer">  
-                <li>
+                <h3 class="text-start fs-4 text-decoration-underline">
                     Te guiamos para que vos tambien puedas realizar las recetas de la Nona
-                </li>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
+                </h3>
+                <p class="text-start fs-6">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
                 <img src="./img/libro_de_recetas.jpg" class="img" alt="Libro de recetas">
             </div>    
-        </ul>
     </article>    
 </section>
 <!-- Termina Section -->
@@ -116,7 +143,7 @@
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>       
         
-          <div class="boxFormiframe">
+          <div class="ratio ratio-16x9">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3274.2674697388925!2d-58.384815184637525!3d-34.8495060780518!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd4d084efac8f%3A0x267d1aa2742dc4da!2sLanguenheim%20148%2C%20Longchamps%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1661742318145!5m2!1sen!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>  
     
