Cambios entrega final

--- a/index.html
+++ b/index.html
@@ -70,39 +70,39 @@
 
  <!-- Inicia Section -->
 <section>
-        <div class="container-fluid bg-grey">
-            <h1 class="p-2 m-2 text-center ">Bienvenidos a Pizzeria Doña Coya</h1>
+        <div class="container-fluid bg-white">
+            <h1 class="p-2 m-2 text-center logoColor">Bienvenidos a Pizzeria Doña Coya</h1>
             <p class="text-center">Bienvenidos a nuestra Pagina Web donde podras Conocernos, ver nuestros Productos y Servicios.</p>
         </div>  
 
-        <div class="container bg-grey">
+        <div class="container bg-white">
             <h2 class="text-center">Nuestros Servicios</h2>
         </div>
 
     <article>
             <div class="gridContainer">
-                <h3 class="text-start fs-4 text-decoration-underline">
-                    Cubrimos tus Eventos más Importantes
+                <h3 class="text-start fs-4 text-decoration-underline font-effect-shadow-multiple logoColor">
+                  𝐂𝐮𝐛𝐫𝐢𝐦𝐨𝐬 𝐭𝐮𝐬 𝐞𝐯𝐞𝐧𝐭𝐨𝐬 𝐦á𝐬 𝐢𝐦𝐩𝐨𝐫𝐭𝐚𝐧𝐭𝐞𝐬
                 </h3>
                     <p class="text-start fs-6">Junto con nuestro equipo de trabajo nos ocupamos de Preparar todo para tu evento y que tanto vos como tus comensales se ocupen unicamente de crear un recuerdo hermoso.</p>
                     <img src="./img/eventos_1.jpg" class="img" alt="Servicios de Catering">
             </div> 
 
             <div class="gridContainer"> 
-                <h3 class="text-start fs-4 text-decoration-underline">
-                        Contamos con Servicio de Delivery para que recibas tu Cena sin moverte de tu casa
+                <h3 class="text-start fs-4 text-decoration-underline font-effect-shadow-multiple logoColor">
+                  𝐂𝐨𝐧𝐭𝐚𝐦𝐨𝐬 𝐜𝐨𝐧 𝐒𝐞𝐫𝐯𝐢𝐜𝐢𝐨 𝐝𝐞 𝐃𝐞𝐥𝐢𝐯𝐞𝐫𝐲 𝐩𝐚𝐫𝐚 𝐪𝐮𝐞 𝐫𝐞𝐜𝐢𝐛𝐚𝐬 𝐭𝐮 𝐂𝐞𝐧𝐚 𝐬𝐢𝐧 𝐦𝐨𝐯𝐞𝐫𝐭𝐞 𝐝𝐞 𝐭𝐮 𝐜𝐚𝐬𝐚
                 </h3>
-                <p class="text-start fs-6">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
+                <p class="text-start fs-6">No dudes en moverte de tu casa, nosotros te facilitamos todo, contamos con servicio de delivery para que en los de frio o calor no tengas que hacer nada mas que esperar tu comida</p>
 
                     <img src="./img/pizzas_pedidos.jpg" class="img" alt="Pedido de Pizzas">
             </div> 
 
             <div class="gridContainer">  
-                <h3 class="text-start fs-4 text-decoration-underline">
-                    Te guiamos para que vos tambien puedas realizar las recetas de la Nona
+                <h3 class="text-start fs-4 text-decoration-underline font-effect-shadow-multiple logoColor">
+                  𝐓𝐞 𝐠𝐮𝐢𝐚𝐦𝐨𝐬 𝐩𝐚𝐫𝐚 𝐪𝐮𝐞 𝐯𝐨𝐬 𝐭𝐚𝐦𝐛𝐢𝐞𝐧 𝐩𝐮𝐞𝐝𝐚𝐬 𝐫𝐞𝐚𝐥𝐢𝐳𝐚𝐫 𝐥𝐚𝐬 𝐫𝐞𝐜𝐞𝐭𝐚𝐬 𝐝𝐞 𝐥𝐚 𝐍𝐨𝐧𝐚
                 </h3>
-                <p class="text-start fs-6">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
-                <img src="./img/libro_de_recetas.jpg" class="img" alt="Libro de recetas">
+                <p class="text-start fs-6">Contamos con una amplia variedad de Recetas para que puedas poner en practica tus capacidades culinarias y lo mejor de todo es que son las recetas magicas de la Nona</p>
+                <img src="./img/sobre_nosotros.jpeg" class="img" alt="Abuela Cocinando">
             </div>    
     </article>    
 </section>
