--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" Content="Pizzeria Doña Coya tu mejor opcion de comidas caseras en Zona Sur"> 
+    <meta name="keywords" content="Pizzeria, Pizzas, Empanadas, Comidas Caseras">
+    <meta name="author" Content="Mauro Guzman">
     <title>Recetas Pizzeria Doña Coya</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
@@ -11,6 +14,13 @@
 
 </head>
 <body>
+    <!-- CONTACTO -->
+<div class="container-fluid d-flex justify-content-center bg-white">
+  <img src="../img/wssp_img.webp" height="50 px" width="50 px" alt="Logo Wssp">
+  <h3 class="p-2 fs-5">011-32723909/ 011-36317804</h3>
+</div>
+<!-- CONTACTO -->
+
     <!-- Inicia NAV -->
     <nav class="navbar navbar-expand-sm bg-white text-black" id="botonera">
         <div class="container-fluid">
@@ -34,27 +44,124 @@
 
  <!-- Inicia Section -->
 <section>
-        <div class="boxForm2">
+        <div class="boxForm2 text-center">
             <h1 class>Las Mejores Recetas de la Nona</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam magni repellat molestiae voluptatem asperiores nulla unde. Praesentium temporibus, adipisci nesciunt eligendi nemo rem placeat odit consectetur iure perspiciatis quis delectus?</p>
+            <p>¿Estas Preparadx para realizar las Recetas más famosas de la Nona?</p>
         </div>  
     <article>
-            <img src="../img/budin_pan_recetas.jpg" class="imgSize" alt="Budin de Pan">
             <div class="container-fluid bg-grey">
-                <h2>
+                <h2 class="text-Start p-3 logoColor">
                   Budin de Pan
                 </h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
+              <div class="row">
+                   <div class="col-lg-6 col-sm-12">
+                <img src="../img/budin_pan_recetas.jpg" class="imgSize container" alt="Budin de Pan">
+                  </div>
+                    <div class="col-lg-6">
+                      <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                              Primer Paso
+                            </button>
+                          </h2>
+                          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                              <strong>Primer Paso</strong> Cortar el pan en trozos pequeños. El pan puede ser viejo, es decir no es necesario que esté crocante, de hecho el budín de pan es una receta justa para reciclar el pan que ya está con consistencia gomosa.
+                              Colocar los trozos de pan en la licuadora junto con la leche que tiene que estar tibia (no caliente). Dejar hidratando en la leche tibia durante media hora.
+                              Mientras tanto vamos a hacer el caramelo: colocar en una olla antiadherente un vaso de azúcar. En otro recipiente ponemos a hervir medio vaso de agua. Cuando el azúcar esté completamente derretida retiramos del fuego y agregamos el agua hirviendo, revolvemos hasta que esté totalmente integrado. Luego dejamos enfriar hasta que esté listo el caramelo. Les recomiendo que vean la receta completa en el link que les dejé mas arriba, que con caramelo caliente no se juega!
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                              Segundo paso
+                            </button>
+                          </h2>
+                          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                              <strong>Segundo Paso</strong> Ahora llevamos el caramelo al molde en el que vamos a hacer el budín de pan. Es importante asegurarnos de que el caramelo cubra todo el fondo y los bordes como pueden ver en el video.
+                              Una vez pasada la media hora vamos a licuar el pan y la leche. Yo lo hago completamente licuado hasta obtener una crema, si ustedes quieren que se noten los pedacitos de pan pueden licuarla menos.
+                              Luego de obtener la consistencia deseada agregamos el azúcar y los huevos y volvemos a licuar hasta integrar completamente.
+                              Incorporar la ralladura de limón (si quieren pueden también agregar esencia de vainilla). Si está muy espesa éste es el momento de agregar un poco de leche antes de volver a licuar por última vez.
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                              Tercer Paso
+                            </button>
+                          </h2>
+                          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                              <strong>Tercer Paso</strong> Colocar la mezcla en el molde bañado de caramelo y tapar con papel manteca. El papel manteca cumple la función de que el budín de pan no se seque, realmente funciona!
+                              Para hacer éste budín de pan necesitamos cocinarlo a a baño maría, por lo que vamos a colocar el molde del budín en una placa para horno que contenga agua.
+                              Cocinar a 160º (mínimo) durante 1 hora. Desmoldar y dejar que se enfríe antes de servir. Ideal para acompañar con dulce de leche o crema !
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
             </div> 
 
-            <img src="../img/recetas_nona.jpg" class="imgSize" alt="Bizcochuelo de Vainilla">
-            <div class="container-fluid bg-grey"> 
-                <h2>
-                  Bizcochuelo de Vainilla
-                </h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
-            </div> 
-    </article>    
+            <div class="container-fluid bg-grey">
+              <h2 class="text-Start p-3 logoColor">
+                Bizcochuelo de Vainilla
+              </h2>
+            <div class="row">
+                 <div class="col-lg-6 col-sm-12">
+              <img src="../img/recetas_nona.jpg" class="imgSize container" alt="Budin de Pan">
+                </div>
+                  <div class="col-lg-6">
+                    <div class="accordion" id="accordionExample">
+                      <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne">
+                          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Primer Paso
+                          </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                          <div class="accordion-body">
+                            <strong>Primer Paso</strong> Vamos a cascar los huevos y volcarlos en un recipiente junto con el azúcar y lo vamos a batir. Yo uso la batidora pero obvio que se puede hacer a tenedor alzado. Este paso se llama “cremar” la mezcla. Justamente, es batir hasta que aclare un poco el color y se vuelva espesa la mezcla y crezca. Una vez que veamos que la mezcla aclaró y creció, vamos a agregar el aceite y a seguir batiendo. La idea es que sea un aceite neutro que no aporte un sabor demasiado fuerte a la preparación. Agregamos unas gotitas de esencia de vainilla y seguimos batiendo y batiendo.
+                          </div>
+                        </div>
+                      </div>
+                      <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingTwo">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Segundo paso
+                          </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                          <div class="accordion-body">
+                            <strong>Segundo Paso</strong> Una vez que está todo unido, vamos a dejar de batir y vamos a agregar la primera taza de harina junto con la cucharadita de polvo para hornear, tamizándolos con un coladorcito.  Mezclamos, esta vez sí con una espátula y movimientos envolventes. Una vez que se incorporó todo bien, agregamos al segunda taza de harina y repetimos el procedimiento de mezclado.
+
+                            Ahora viene el momento en el que nos toca evaluar cuán espesa nos quedó la mezcla (en el video se puede ver una referencia, pero igual confíen en sus criterios bizcochueleros).
+                            
+                            Si ven que les quedó muy espeso, pueden ir agregando chorritos de leche de a poquito hasta que la mezcla consiga la consistencia deseada. por el contrario, si ven que quedó muy líquido, se hace lo mismo pero con la harina.
+                          </div>
+                        </div>
+                      </div>
+                      <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingThree">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Tercer Paso
+                          </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                          <div class="accordion-body">
+                            <strong>Tercer Paso</strong> Una vez que la mezcla consiguió la consistencia ideal, nos queda enmantecar y enharinar un molde y volcarla adentro sin más rodeos. Al horno 180º por entre 40 y 50 min aproximadamente. ¡Sean pacientes! dejen el horno cerrado hasta que pasen los primeros 40 min porque sino nuestra maravillosa creación corre peligro de pincharse y no es lo que queremos. ¡Momento de la prueba del palito! Pasados los 40 minutos, podemos abrir el horno e introducir un palillo o cuchillo dentro del bizcochuelo, si sale seco, quiere decir que está listo y es momento de sacarlo. Sepan que antes de desmoldarlo es muy conveniente dejar que se entibie, para correr menos riesgo de que se rompa. A su vez, hay que no dejar se termine de enfriar para que el calor no lo humedezca.
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+          </div> 
+  </article>    
 </section>
 <!-- Termina Section -->
 <!-- Inicia Footer -->
