--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" Content="Pizzeria Doña Coya tu mejor opcion de comidas caseras en Zona Sur"> 
+    <meta name="keywords" content="Pizzeria, Pizzas, Empanadas, Comidas Caseras">
+    <meta name="author" Content="Mauro Guzman">
     <title>Productos Pizzeria Doña Coya</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
@@ -11,6 +14,13 @@
 
 </head>
 <body>
+  <!-- CONTACTO -->
+<div class="container-fluid d-flex justify-content-center bg-white">
+  <img src="../img/wssp_img.webp" height="50 px" width="50 px" alt="Logo Wssp">
+  <h3 class="p-2 fs-5">011-32723909/ 011-36317804</h3>
+</div>
+<!-- CONTACTO -->
+
     <!-- Inicia NAV -->
     <nav class="navbar navbar-expand-sm bg-white text-black" id="botonera">
         <div class="container-fluid">
@@ -34,34 +44,75 @@
  <!-- Inicia Section -->
 <section>
 
-        <div class="container-fluid text-center bg-grey">
+        <div class="container-fluid text-center bg-white text-decoration-underline p-4">
             <h1>PRODUCTOS PIZZERIA DOÑA COYA</h1>
         </div>
 
     <article>
-            <div class="gridContainer">
-                <h3>
-                    Empanadas de la Nona
+            <div class="container-fluid text-center">
+              <h3 class="text-center  fs-4 text-decoration-underline logoColor">
+                Empanadas de la Nona
                 </h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
-                    <img src="../img/productos_empanadas.jpeg" class="img" alt="Servicios de Catering">
+                <div class="gridContainerProductosEmpanadas text-start p-4 m-4">
+                  <div class="Box1">
+                      <h4>Verdura</h4>
+                      <p>Acelga, Salsa Bechamel y Queso</p>
+                  </div>
+                  <div class="Box2">
+                      <h4>Carne</h4>
+                      <p>Carne cortada a cuchillo, Cebolla, Morron rojo y Especias</p>
+                  </div>
+                  <div class="Box3">
+                      <h4>Pollo</h4>
+                      <p>Pollo trozado, Cebolla, Morron rojo y Especias</p>
+                  </div>
+                  <div class="Box4">
+                      <h4>Humita</h4>
+                      <p>Choclo cremoso, Cebolla, Morron Rojo y Queso</p>
+                  </div>
+                  <div class="Box5">
+                      <h4>Jamon y Queso</h4>
+                      <p>Jamon picado, Queso Cremoso </p>
+                  </div>
+                  <div class="Box6">
+                    <h4>Especial de la Nona</h4>
+                    <p>Panceta picada, Ciruelas y Queso</p>
+                  </div>
+                </div>
             </div> 
 
-            <div class="gridContainer"> 
-                <h3>
-                        Las mejores Pizzas de Longchamps
+            <div class="container-fluid"> 
+              <h3 class="text-center fs-4 text-decoration-underline logoColor">
+                Las mejores Pizzas de Longchamps
                 </h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
-                    <img src="../img/pizza..jpg" class="img" alt="Pizza">
+                <div class="gridContainerProductosPizza text-start p-4 m-4">
+                  <div class="Box1">
+                      <h4>Rúcula con Jamón Crudo</h4>
+                      <p>Salsa de tomate, muzzarella, tomates secos hidratos, jamón crudo y rúcula fresca. Se sirve con orégano y aceitunas verdes descarozadas</p>
+                  </div>
+                  <div class="Box2">
+                      <h4>Roquefort</h4>
+                      <p>Salsa de tomate, muzzarella y queso azul. Se sirve con orégano y aceitunas verdes descarozadas. Puede ser Grande, chica o individual.</p>
+                  </div>
+                  <div class="Box3">
+                      <h4>Palmitos con Jamón</h4>
+                      <p>Salsa de tomate, muzzarella, palmitos, huevo picado y jamón cocido natural. Opcional Salsa golf. Se sirve con orégano y aceitunas verdes.</p>
+                  </div>
+                  <div class="Box4">
+                      <h4>Jamón y Morrones</h4>
+                      <p>Salsa de tomate, muzzarella, morrones asados y jamón cocido natural. Se sirve con orégano y aceitunas verdes descarozadas.</p>
+                  </div>
+                  <div class="Box5">
+                      <h4>Muzzarella</h4>
+                      <p>Salsa de tomate y muzzarella. Se sirve con orégano y aceitunas verdes descarozadas. Puede ser Grande, chica o individual. </p>
+                  </div>
+                  <div class="Box6">
+                    <h4>Fugazzetta</h4>
+                    <p>Rodajas de cebolla y muzzarella. Se sirve con orégano y aceitunas verdes descarozadas. Puede ser Grande, chica o individual.</p>
+                  </div>
+                </div>
             </div> 
-
-            <div class="gridContainer">  
-                <h3>
-                    Los postres más ricos para compartir con tu familia
-                </h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
-                <img src="../img/postres_productos.jpg" class="img" alt="Libro de recetas">
-            </div>    
+            </div> 
     </article>    
 </section>
 <!-- Termina Section -->
