--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" Content="Pizzeria Doña Coya tu mejor opcion de comidas caseras en Zona Sur"> 
+    <meta name="keywords" content="Pizzeria, Pizzas, Empanadas, Comidas Caseras">
+    <meta name="author" Content="Mauro Guzman">
     <title>Sobre Nosotros</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
@@ -11,6 +14,13 @@
 
 </head>
 <body>
+    <!-- CONTACTO -->
+<div class="container-fluid d-flex justify-content-center bg-white">
+  <img src="../img/wssp_img.webp" height="50 px" width="50 px" alt="Logo Wssp">
+  <h3 class="p-2 fs-5">011-32723909/ 011-36317804</h3>
+</div>
+<!-- CONTACTO -->
+
     <!-- Inicia NAV -->
     <nav class="navbar navbar-expand-sm bg-white text-black" id="botonera">
         <div class="container-fluid">
