--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -22,8 +22,8 @@
 <!-- CONTACTO -->
 
     <!-- Inicia NAV -->
-    <nav class="navbar navbar-expand-sm bg-white text-black" id="botonera">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-sm bg-white text-black sticky-top" id="botonera">
+      <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
             <img src="../img/logo.jpg" class="logoBorder" alt="Logo Pizzeria">
           </a>
